--- a/libraries/opencv/build.gradle
+++ b/libraries/opencv/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'com.android.library'
-
 buildscript {
     repositories {
         mavenCentral()
     }
 }
-
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 21
         versionCode 300
         versionName "3.0.0"
     }
@@ -26,4 +24,6 @@ android {
             aidl.srcDirs = ['src']
         }
     }
+}
+dependencies {
 }
