--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,13 @@
         android:allowBackup="false">
         <activity
             android:name="pl.robolab.fira.colortracking.MainActivity"
-            android:label="@string/app_name">
+            android:screenOrientation="landscape"
+            android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="ColorBlobDetectionActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboardHidden|orientation">
         </activity>
         <activity
             android:name="pl.robolab.fira.colortracking.DeviceListActivity"
